- [Feature] New default connection profile for ownCloud
- [Feature] Retain modification date in metadata for uploads (Google Storage) (#11784)
- [Feature] Retain modification date in metadata for uploads (S3) (#11784)
- [Feature] New default connection profile (ownCloud)
- [Feature] Build package in AppImage format (CLI) (#11762)
- [Bugfix] Change default path for NextCloud connections to include username (#11787)
- [Bugfix] Failed to overwrite upload of object with custom metadata (Google Storage) (#11781)
- [Bugfix] Skip duplicate file versions in output (Cyberduck CLI) (#11786)
- [Bugfix] Fails to use selected private key file outside of ~/.ssh folder (SFTP, Mac App Store) (#11782)
- [Bugfix] Unable to delete folders (Google Storage) (#11808)
- [Bugfix] Allow to set Glacier storage class (Google Storage) (#11521)
- [Bugfix] Unable to remove delete marker (S3) (#11803)
- [Bugfix] Taskbar shows incorrect number of transfers (Windows) (#11813)
- [Bugfix] Allow to delete trashed files (Google Drive) (#11816)

7.10.2
- [Feature] Add --purge option to invalidate files in Amazon CloudFront distributions and OpenStack Swift (X-CDN-Enabled header) (#11767)
- [Bugfix] Links for CloudFront distributions and S3 website endpoints are missing in the Copy URL and Open URL menu (S3) (#11764)
- [Bugfix] Failure downloading files (Files.com)
- [Bugfix] Return existing share URL when found (Dropbox) (#11209)
- [Bugfix] Select origin bucket for logging target with missing permission to list all buckets (S3) (#17755)
- [Bugfix] Unable to upload to buckets with uniform bucket-level access enabled (Google Storage) (#11766)
- [Bugfix] Missing progress information when copying file (#11019)

7.10.1
- [Feature] Support S3 interface endpoints (AWS PrivateLink for Amazon S3) (#11735)
- [Feature] Updated support for Files.com using proprietary REST API (Files.com)
- [Feature] Allow override of protocol specific settings in connection profiles