@@ -82,6 +82,8 @@
     <li><span class="label label-success">Feature</span> Build package in AppImage format (CLI) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11762">#11762</a>)</li>
     <li><span class="label label-success">Feature</span> Support v3 PuTTY keys (SFTP)</li>
+    <li><span class="label label-success">Feature</span> Column in browser window to display checksum (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11824">#11824</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Change default path for NextCloud connections to include
         username (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11787">#11787</a>)
@@ -107,6 +109,12 @@
             target="_blank" href="https://trac.cyberduck.io/ticket/11813">#11813</a>)</li>
     <li><span class="label label-warning">Bugfix</span> Allow to delete trashed files (Google Drive) (<a
             target="_blank" href="https://trac.cyberduck.io/ticket/11816">#11816</a>)</li>
+    <li><span class="label label-warning">Bugfix</span> Create directory placeholders using default storage class (S3) (<a
+            target="_blank" href="https://trac.cyberduck.io/ticket/11751">#11751</a>)
+    <li><span class="label label-warning">Bugfix</span> Create master key using default storage class (S3, Cryptomator) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11751">#11751</a>)
+    <li><span class="label label-warning">Bugfix</span> Use specific region endpoint only with --region option (S3, CLI) (<a
+        target="_blank" href="https://trac.cyberduck.io/ticket/11827">#11827</a>)
 </ul>
 
 <p>
